cmake_minimum_required (VERSION 2.8)
PROJECT (HDF5_TOOLS)

#-----------------------------------------------------------------------------
# Setup include Directories
#-----------------------------------------------------------------------------
INCLUDE_DIRECTORIES (${HDF5_TOOLS_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES (${HDF5_PROJECT_DIR}/test)

# --------------------------------------------------------------------
# If testing was NOT enabled, then we need to build the tools library
# --------------------------------------------------------------------
IF (NOT BUILD_TESTING)
  ADD_SUBDIRECTORY (${HDF5_TOOLS_SOURCE_DIR}/lib)
ENDIF (NOT BUILD_TESTING)

#-- Add the h5diff and test executables
ADD_EXECUTABLE (h5diff
    ${HDF5_TOOLS_SOURCE_DIR}/h5diff/h5diff_common.c
    ${HDF5_TOOLS_SOURCE_DIR}/h5diff/h5diff_main.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5diff 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5diff PROPERTIES OUTPUT_NAME "h5diff")
    SET_TARGET_PROPERTIES (h5diff PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5diff  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

#-- Add the h5dump and test executables
ADD_EXECUTABLE (h5dump ${HDF5_TOOLS_SOURCE_DIR}/h5dump/h5dump.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5dump 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5dump PROPERTIES OUTPUT_NAME "h5dump")
    SET_TARGET_PROPERTIES (h5dump PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5dump  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

#-- Add the h5import and test executables
ADD_EXECUTABLE (h5import ${HDF5_TOOLS_SOURCE_DIR}/h5import/h5import.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5import 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5import PROPERTIES OUTPUT_NAME "h5import")
    SET_TARGET_PROPERTIES (h5import PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5import  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

#-- Add the h5dump and test executables
ADD_EXECUTABLE (h5jam ${HDF5_TOOLS_SOURCE_DIR}/h5jam/h5jam.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5jam 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5jam PROPERTIES OUTPUT_NAME "h5jam")
    SET_TARGET_PROPERTIES (h5jam PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5jam  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

ADD_EXECUTABLE (getub ${HDF5_TOOLS_SOURCE_DIR}/h5jam/getub.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET getub 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (getub PROPERTIES OUTPUT_NAME "getub")
    SET_TARGET_PROPERTIES (getub PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (getub  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

ADD_EXECUTABLE (tellub ${HDF5_TOOLS_SOURCE_DIR}/h5jam/tellub.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET tellub 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (tellub PROPERTIES OUTPUT_NAME "tellub")
    SET_TARGET_PROPERTIES (tellub PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (tellub  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

ADD_EXECUTABLE (h5unjam ${HDF5_TOOLS_SOURCE_DIR}/h5jam/h5unjam.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5unjam 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5unjam PROPERTIES OUTPUT_NAME "h5unjam")
    SET_TARGET_PROPERTIES (h5unjam PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5unjam  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

#-- Add the h5ls executable
ADD_EXECUTABLE (h5ls ${HDF5_TOOLS_SOURCE_DIR}/h5ls/h5ls.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5ls 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5ls PROPERTIES OUTPUT_NAME "h5ls")
    SET_TARGET_PROPERTIES (h5ls PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5ls  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

#-- Misc Executables
ADD_EXECUTABLE (h5debug ${HDF5_TOOLS_SOURCE_DIR}/misc/h5debug.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5debug 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5debug PROPERTIES OUTPUT_NAME "h5debug")
    SET_TARGET_PROPERTIES (h5debug PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5debug ${HDF5_LIB_TARGET} ${HDF5_TOOLS_LIB_TARGET})

ADD_EXECUTABLE (h5repart ${HDF5_TOOLS_SOURCE_DIR}/misc/h5repart.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5repart 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5repart PROPERTIES OUTPUT_NAME "h5repart")
    SET_TARGET_PROPERTIES (h5repart PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5repart ${HDF5_LIB_TARGET} ${HDF5_TOOLS_LIB_TARGET})

#-- h5Repack executables
SET (REPACK_COMMON_SRCS
    ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack_copy.c
    ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack_filters.c
  #  ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack_list.c
    ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack_opttable.c
    ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack_parse.c
    ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack_refs.c
    ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack_verify.c
    ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack.c
)
INCLUDE_DIRECTORIES (${HDF5_TEST_SOURCE_DIR})
ADD_EXECUTABLE (h5repack ${REPACK_COMMON_SRCS} ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repack_main.c)
IF (BUILD_SHARED_LIBS)
  IF (WIN32)
    SET_PROPERTY (TARGET h5repack 
        APPEND PROPERTY COMPILE_DEFINITIONS 
            _HDF5USEDLL_
			_HDF5TOOLSUSEDLL_
    )
    SET_TARGET_PROPERTIES (h5repack PROPERTIES OUTPUT_NAME "h5repack")
    SET_TARGET_PROPERTIES (h5repack PROPERTIES PREFIX "dll")
  ENDIF (WIN32)
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (h5repack  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_LIB_TARGET})

SET (H5_DEP_EXECUTABLES
    h5diff
    h5dump
    h5import
    h5jam
    getub
    tellub
    h5unjam
    h5ls
    h5debug
    h5repart
    h5repack
)

IF (BUILD_TESTING)
  IF (NOT BUILD_SHARED_LIBS)
    ADD_EXECUTABLE (h5diffgentest ${HDF5_TOOLS_SOURCE_DIR}/h5diff/h5diffgentest.c)
    TARGET_LINK_LIBRARIES (h5diffgentest ${HDF5_LIB_TARGET} ${HDF5_TOOLS_LIB_TARGET})
    #ADD_TEST (h5diffgentest ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/h5diffgentest)

    ADD_EXECUTABLE (h5dumpgentest ${HDF5_TOOLS_SOURCE_DIR}/h5dump/h5dumpgentest.c)
    TARGET_LINK_LIBRARIES (h5dumpgentest ${HDF5_LIB_TARGET} ${HDF5_TOOLS_LIB_TARGET})
    #ADD_TEST (h5dumpgentest ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/h5dumpgentest)

    ADD_EXECUTABLE (h5jamgentest ${HDF5_TOOLS_SOURCE_DIR}/h5jam/h5jamgentest.c)
    TARGET_LINK_LIBRARIES (h5jamgentest ${HDF5_LIB_TARGET} ${HDF5_TOOLS_LIB_TARGET})
    #ADD_TEST (h5jamgentest ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/h5jamgentest)
  ENDIF (NOT BUILD_SHARED_LIBS)

  ADD_EXECUTABLE (h5importtest ${HDF5_TOOLS_SOURCE_DIR}/h5import/h5importtest.c)
  IF (BUILD_SHARED_LIBS)
    IF (WIN32)
      SET_PROPERTY (TARGET h5importtest 
          APPEND PROPERTY COMPILE_DEFINITIONS 
              _HDF5USEDLL_
              _HDF5TOOLSUSEDLL_
      )
      SET_TARGET_PROPERTIES (h5importtest PROPERTIES OUTPUT_NAME "h5importtest")
      SET_TARGET_PROPERTIES (h5importtest PROPERTIES PREFIX "dll")
    ENDIF (WIN32)
  ENDIF (BUILD_SHARED_LIBS)
  TARGET_LINK_LIBRARIES (h5importtest ${HDF5_LIB_TARGET} ${HDF5_TOOLS_LIB_TARGET})
  ADD_TEST (h5importtest ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/h5importtest)

  ADD_EXECUTABLE (testh5repack_detect_szip ${HDF5_TOOLS_SOURCE_DIR}/h5repack/testh5repack_detect_szip.c)
  IF (BUILD_SHARED_LIBS)
    IF (WIN32)
      SET_PROPERTY (TARGET testh5repack_detect_szip 
          APPEND PROPERTY COMPILE_DEFINITIONS 
              _HDF5USEDLL_
			  _HDF5TOOLSUSEDLL_
      )
      SET_TARGET_PROPERTIES (testh5repack_detect_szip PROPERTIES OUTPUT_NAME "testh5repack_detect_szip")
      SET_TARGET_PROPERTIES (testh5repack_detect_szip PROPERTIES PREFIX "dll")
    ENDIF (WIN32)
  ENDIF (BUILD_SHARED_LIBS)
  TARGET_LINK_LIBRARIES (testh5repack_detect_szip ${HDF5_LIB_TARGET} ${HDF5_TOOLS_LIB_TARGET} ${HDF5_TEST_LIB_TARGET})
  ADD_TEST (testh5repack_detect_szip ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/testh5repack_detect_szip)
  SET (passRegex "yes")
  SET_TESTS_PROPERTIES (testh5repack_detect_szip PROPERTIES PASS_REGULAR_EXPRESSION "yes")

  ADD_EXECUTABLE (h5repacktest ${REPACK_COMMON_SRCS} ${HDF5_TOOLS_SOURCE_DIR}/h5repack/h5repacktst.c)
  IF (BUILD_SHARED_LIBS)
    IF (WIN32)
      SET_PROPERTY (TARGET h5repacktest 
          APPEND PROPERTY COMPILE_DEFINITIONS 
              _HDF5USEDLL_
			  _HDF5TOOLSUSEDLL_
      )
      SET_TARGET_PROPERTIES (h5repacktest PROPERTIES OUTPUT_NAME "h5repacktest")
      SET_TARGET_PROPERTIES (h5repacktest PROPERTIES PREFIX "dll")
    ENDIF (WIN32)
  ENDIF (BUILD_SHARED_LIBS)
  TARGET_LINK_LIBRARIES (h5repacktest  ${HDF5_TOOLS_LIB_TARGET} ${HDF5_TEST_LIB_TARGET})
  ADD_TEST (h5repacktest ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/h5repacktest)

  SET (H5_DEP_EXECUTABLES ${H5_DEP_EXECUTABLES}
     #   h5diffgentest
        binread
     #   h5dumpgentest
     #   h5jamgentest
        h5importtest
        h5repacktest
        testh5repack_detect_szip
  )
ENDIF (BUILD_TESTING)

#-----------------------------------------------------------------------------
# Rules for Installation of tools using make Install target
#-----------------------------------------------------------------------------
INSTALL (
    TARGETS
        h5debug h5diff h5dump h5import
        h5ls h5repack h5repart
        h5jam h5unjam
    RUNTIME DESTINATION
        bin/tools
)
